Update README with project prompt and structure details
Added project prompt and detailed instructions for Java 25 performance benchmarking suite.